--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include README.md
 include LICENSE
 include CHANGELOG.md
 include requirements.txt
-include pplx-ai.gif
+include pplx-ai.png
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 recursive-exclude * *.so
